manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-edu-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: k8s-edu-app
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-edu-app
        version: blue
    spec:
      containers:
        - name: k8s-edu-app
          image: ydcho0902/k8s-edu             # dockerhub image repository : repo/image명:Tag
          imagePullPolicy: IfNotPresent        # k8s 클러스터에 다운로드 된 이미지 없으면 다운 or Always
          ports:
            - name: http
              containerPort: 8080              # demo.jar 실행 포트
              protocol: TCP
          resources:                           # pod 사용 리소스 설정 블록
            requests:                          # 생성시 필요한 최소 리소스
              cpu: "300m"
              memory: "500Mi"
            limits:                            # pod가 사용 가능한 최대 리소스
              cpu: "300m"
              memory: "500Mi"
          volumeMounts:
            - name: application-properties
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: application-properties
          configMap:
            name: "k8s-edu-user-configmap"
            items:
              - key: application.yml
                path: application.yml
      imagePullSecrets:                        # dockerhub 이미지 pull 위한 secret
        - name: k8s-edu-dockerhub-secret
      nodeSelector:                            # pod가 실행 될 node 설정
        kubernetes.io/hostname: worker01
